[package]
name = "Bech32KeyGen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.27.0"
bech32 = "0.9.0"
hex = "0.4.3"
rand = "0.8.4"
log = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
tokio-socks = "0.5"
tokio-tungstenite = {version = "0.17", features = ["native-tls"]}
tungstenite = "0.17"
